--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -14,7 +14,7 @@ paddle {
     api-url = "https://nodes-stagenet.wavesnodes.com/"
     block-interval = 60s
     min-asset-info-update-interval = 10
-    # faucet-seed = ""
+    faucet-seed = "remain"
   }
   testnet {
     api-url = "https://nodes-testnet.wavesnodes.com/"
@@ -26,7 +26,7 @@ paddle {
     api-url = "https://nodes.wavesnodes.com/"
     block-interval = 60s
     min-asset-info-update-interval = 100000
-    # faucet-seed = ""
+    # faucet-seed = "remain"
   }
   devnet1 {
       api-url = "http://devnet1-htz-nbg1-1.wavesnodes.com:6869/"
