--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -2,13 +2,13 @@ paddle {
   profile = "docker"
   local {
     api-url = "http://127.0.0.1:6869/"
-    block-interval = 10s
-    min-asset-info-update-interval = 2
+    block-interval = 60s
+    min-asset-info-update-interval = 10
     faucet-seed = "waves private node seed with waves tokens"
   }
   docker = ${paddle.local} {
-    docker-image = "wavesplatform/waves-private-node:latest"
-    auto-shutdown = yes
+    docker-image = "wavesplatform/wavesnode:latest"
+    auto-shutdown = no
   }
   stagenet {
     api-url = "https://nodes-stagenet.wavesnodes.com/"
