added worked docker config

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1,14 +1,14 @@
 paddle {
   profile = "docker"
   local {
-    api-url = "http://127.0.0.1:6869/"
+    api-url = "http://127.0.0.1:6863/"
     block-interval = 60s
     min-asset-info-update-interval = 10
     faucet-seed = "waves private node seed with waves tokens"
   }
   docker = ${paddle.local} {
     docker-image = "wavesplatform/wavesnode:latest"
-    auto-shutdown = no
+    auto-shutdown = yes
   }
   stagenet {
     api-url = "https://nodes-stagenet.wavesnodes.com/"
