Added new parameters for reference.conf:    grpc-url    grpc-port    log-level edited Settings.java, added new parameters refactoring Node.java
added public annotation for IssueTransactionTest.java

edited test name for SetScriptTransactionTest.java

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -2,48 +2,59 @@ paddle {
   profile = "docker"
   local {
     api-url = "http://127.0.0.1:6863/"
+    grpc-url = "127.0.0.1"
+    grpc-port = 6888
     block-interval = 60s
     min-asset-info-update-interval = 10
     faucet-seed = "waves private node seed with waves tokens"
+    log-level = "WAVES_LOG_LEVEL=TRACE"
   }
-  docker = ${paddle.local} {
-    docker-image = "wavesplatform/wavesnode:latest"
-    auto-shutdown = yes
-  }
+    docker = ${paddle.local} {
+        docker-image = "wavesplatform/wavesnode:latest"
+        auto-shutdown = true
+    }
   stagenet {
-    api-url = "https://nodes-stagenet.wavesnodes.com/"
-    block-interval = 60s
-    min-asset-info-update-interval = 10
-    faucet-seed = "remain"
+        api-url = "https://nodes-stagenet.wavesnodes.com/"
+        block-interval = 60s
+        min-asset-info-update-interval = 10
+        log-level = "WAVES_LOG_LEVEL=ERROR"
+        faucet-seed = "remain"
   }
   testnet {
-    api-url = "https://nodes-testnet.wavesnodes.com/"
-    block-interval = 60s
-    min-asset-info-update-interval = 100000
-    # faucet-seed = ""
+        api-url = "https://nodes-testnet.wavesnodes.com/"
+        block-interval = 60s
+        min-asset-info-update-interval = 100000
+        log-level = "WAVES_LOG_LEVEL=ERROR"
+        # faucet-seed = ""
   }
   mainnet {
-    api-url = "https://nodes.wavesnodes.com/"
-    block-interval = 60s
-    min-asset-info-update-interval = 100000
-    # faucet-seed = "remain"
+        api-url = "https://nodes.wavesnodes.com/"
+        block-interval = 60s
+        min-asset-info-update-interval = 100000
+        log-level = "WAVES_LOG_LEVEL=ERROR"
+        # faucet-seed = "remain"
   }
   devnet1 {
-      api-url = "http://devnet1-htz-nbg1-1.wavesnodes.com:6869/"
-      block-interval = 60s
-      min-asset-info-update-interval = 100000
-      faucet-seed = "remain"
+        api-url = "http://devnet1-htz-nbg1-1.wavesnodes.com:6869/"
+        grpc-url = "devnet1-htz-nbg1-1.wavesnodes.com"
+        grpc-port = 6881
+        block-interval = 60s
+        min-asset-info-update-interval = 100000
+        log-level = "WAVES_LOG_LEVEL=ERROR"
+        faucet-seed = "remain"
    }
   devnet3 {
-          api-url = "http://devnet1-htz-nbg1-3.wavesnodes.com:6869/"
-          block-interval = 60s
-          min-asset-info-update-interval = 100000
-          faucet-seed = "remain"
+        api-url = "http://devnet1-htz-nbg1-3.wavesnodes.com:6869/"
+        block-interval = 60s
+        min-asset-info-update-interval = 100000
+        log-level = "WAVES_LOG_LEVEL=ERROR"
+        faucet-seed = "remain"
   }
   devnet4 {
         api-url = "http://devnet1-htz-nbg1-4.wavesnodes.com:6869/"
         block-interval = 60s
         min-asset-info-update-interval = 100000
+        log-level = "WAVES_LOG_LEVEL=ERROR"
         chain-id = L
         faucet-seed = "foo"
   }
