--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
     </properties>
 
     <build>
+
         <plugins>
 
             <plugin>
@@ -59,7 +60,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version>
+                <version>3.0.0-M7</version>
                 <configuration>
                     <properties>
                         <configurationParameters>
@@ -228,6 +229,11 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
             <version>5.9.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-suite-engine</artifactId>
+            <version>1.8.1</version>
         </dependency>
         <dependency>
             <groupId>org.assertj</groupId>
